src/test/deca/context/invalid/fields/access_private_field_outside_custom.deca
// Description :
// accès à un champ private depuis une autre classe
//
// Resultats :
// Erreur contextuelle
// Ligne 12 : champ private inaccessible

class K {
    private int secret;
}

class L {
    void reveal() {
        K k = new K();
        int x = k.secret; // doit échouer
    }
}
